k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sudoku-game
    labels:
        app: sudoku-game
spec:
    replicas: 2
    selector:
        matchLabels:
            app: sudoku-game
    template:
        metadata:
            labels:
                app: sudoku-game
        spec:
            containers:
                - name: sudoku-game
                  image: carlltz/general:sudoku-game-sha
                  ports:
                      - containerPort: 3000
                  resources:
                      requests:
                          memory: '128Mi'
                          cpu: '100m'
                      limits:
                          memory: '256Mi'
                          cpu: '200m'
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 3000
                      initialDelaySeconds: 30
                      periodSeconds: 10
                  readinessProbe:
                      httpGet:
                          path: /
                          port: 3000
                      initialDelaySeconds: 5
                      periodSeconds: 5
