k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sudoku-game-service
    labels:
        app: sudoku-game
spec:
    type: ClusterIP
    ports:
        - port: 80
          targetPort: 3000
          protocol: TCP
          name: http
    selector:
        app: sudoku-game
